--- a/secrets.env.example
+++ b/secrets.env.example
@@ -1,5 +1,5 @@
 DAYS_AGO=1
-MONGODB_URI=mongodb://mongo:27017
+MONGODB_URI=mongodb://localhost:27017
 SHOPIFY_API_KEY=secret
 SHOPIFY_PASSWORD=secret
 SHOPIFY_SHOP_NAME=your-store
