Add permissions for OIDC connector
This workflow needs to modify the "token" used for actions, in order to
get OIDC permission to IAM and ECR. Add this block. The workflow will
fail to login without it.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,9 @@
 name: Shopify Analytics Deploy
 
+permissions:
+  id-token: write # Required to allow the JWT to be requested from GitHub's OIDC provider
+  contents: read # Required for actions/checkout
+
 on:
   push:
     branches: [ master ]
